services/networking/cilium/backend-traffic-policy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: hubble-auth-redirect
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: hubble-cilium
  responseOverride:
  - match:
      statusCodes:
      - type: Value
        value: 302
    redirect:
      scheme: https
      hostname: auth.k8s.cguertin.dev
      path:
        type: ReplaceFullPath
        replaceFullPath: /oauth2/start?rd=https://network.k8s.cguertin.dev/
      statusCode: 302
