services/networking/cilium/hubble-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-cilium
spec:
  hostnames:
  - network.k8s.cguertin.dev
  parentRefs:
  - name: main-gateway
    namespace: envoy-gateway-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
