services/networking/cilium/hubble-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-cilium
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.k8s.cguertin.dev/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.k8s.cguertin.dev/oauth2/start?rd=$escaped_request_uri"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - network.k8s.cguertin.dev
    secretName: hubble-cilium-cert
  rules:
  - host: network.k8s.cguertin.dev
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: hubble-ui
            port: 
              name: http
