services/networking/cilium/security-policy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hubble-oauth
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: hubble-cilium
  extAuth:
    headersToExtAuth:
    - cookie
    - x-forwarded-proto
    - x-forwarded-host
    - x-forwarded-uri
    http:
      backendRefs:
      - name: oauth2-proxy
        namespace: kube-system
        port: 4180
      path: /oauth2
      headersToBackend:
      - x-auth-request-user
      - x-auth-request-email
      - x-auth-request-access-token
      - location
      - set-cookie
